# dsp-artery

./: .gitignore
DSP/Artery/: Biquad.hs
dsp-artery/: dsp-artery.cabal
dsp-artery-io/: dsp-artery-io.cabal
dsp-artery-io/DSP/Artery/: IO.hs
dsp-artery-io/DSP/Artery/IO/: DirectSound.hs  PortAudio.hs  Types.hs
dsp-artery-io/example/: play.hs  sine.hs
dsp-artery-portaudio/: dsp-artery-portaudio.cabal
dsp-artery-portaudio/DSP/Artery/: PortAudio.hs
dsp-artery/DSP/: Types.hs
dsp-artery/DSP/Artery/: Biquad.hs  Envelope.hs  Oscillator.hs  Playback.hs  Types.hs
dsp-artery/DSP/Artery/Filter/: Biquad.hs  Moog.hs  Types.hs
examples/: bass.hs  nyancat.hs
