name:                dsp-artery-io
version:             0.1
synopsis:            A cross-platform adapter of arteries
-- description:         
homepage:            https://github.com/musical-haskell/dsp-artery
license:             BSD3
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          Fumiaki Kinoshita <fumiexcel@gmail.com>
-- copyright:           
category:            DSP
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10


Flag directsound
  Description:       Use DirectSound backend.
  Default:           True
Flag portaudio
  Description:       Use portaudio to play sounds.
  Default:           True

library
  exposed-modules:     DSP.Artery.IO, DSP.Artery.IO.Types
  ghc-options: -threaded -fexcess-precision -O2
  -- other-modules:       
  -- other-extensions: 
  build-depends: base == 4.*
        , artery >=0.1 && <0.2
        , linear == 1.*
        , data-default
        , WAVE < 0.2

  if flag(directsound)
    build-depends: DirectSound < 0.1
    cpp-options:     -DDSOUND
    other-modules: DSP.Artery.IO.DirectSound

  if flag(portaudio)
    build-depends: portaudio >=0.2 && <0.3
    cpp-options:     -DPORTAUDIO
    other-modules: DSP.Artery.IO.PortAudio

  -- hs-source-dirs:      
  default-language:    Haskell2010