name:                dsp-artery-portaudio
version:             0.1
-- synopsis:            
-- description:         
homepage:            https://github.com/musical-haskell/dsp-artery/dsp-artery-portaudio
license:             BSD3
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          Fumiaki Kinoshita <fumiexcel@gmail.com>
-- copyright:           
category:            DSP
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     DSP.Artery.PortAudio
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base == 4.*, artery >=0.1 && <0.2, portaudio >=0.2 && <0.3, linear == 1.*, data-default, dsp-artery == 0.1.*, reflection ==　1.*
  -- hs-source-dirs:      
  default-language:    Haskell2010